[tool.poetry]
name = "dronesim-python"
version = "0.1.0"
description = ""
authors = ["SKYnSPACE <skynspace@kaist.ac.kr>"]
readme = "README.md"
packages = [{include = "dronesim_python"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
